samples/_failures_safe/1761626215_85a251_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e9e2227.c: In function ‘main’:
./samples/SAFE/__tmp_8e9e2227.c:146:5: error: expected expression at end of input
  146 |     graph_add_edge(&
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8e9e2227.c:146:5: error: too few arguments to function ‘graph_add_edge’
./samples/SAFE/__tmp_8e9e2227.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8e9e2227.c:146:5: error: expected declaration or statement at end of input
  146 |     graph_add_edge(&
      |     ^~~~~~~~~~~~~~
